[tool.poetry]
name = "mosa"
version = "0.1.1"
description = "Multi-objective simulated annealing"
authors = ["Roberto Gomes, PhD <roberto.veiga@ufabc.edu.br>"]
license = "GPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.2"
numpy = "1.26.4"
matplotlib = "3.8.3"

[tool.poetry.group.dev.dependencies]
black = "24.2.0"
jupyter-black = "^0.3.4"
pytest = "8.0.2"
pytest-benchmark = "4.0.0"
ruff = "0.3.2"
mypy = "1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
