[tool.poetry]
name = "mosa"
version = "0.8.5"
description = "Multi-Objective Simulated Annealing (MOSA) implementation in pure Python."
authors = ["Roberto Gomes, PhD <roberto.veiga@ufabc.edu.br>"]
license = "GPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
numpy = "^1.25"
matplotlib = "^3.8"
scipy = "^1.12"
black = {extras = ["jupyter"], version = "^24.10.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
